# crud_fastapi

./: .gitignore  README.md  database.db  pyproject.toml
crud_fastapi/: config.py  database.py  main.py  models.py
crud_fastapi/core/: database.py
crud_fastapi/models/: label_model.py  product_model.py  user_model.py
crud_fastapi/routes/v1/: label_route.py  product_route.py  user_route.py
crud_fastapi/service/: label_service.py  product_service.py  user_service.py
tests/: conftest.py  test_app.py
