[tool.poetry]
name = "crud-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.19"
pydantic-settings = "^2.3.0"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
faker = "^25.8.0"

[tool.taskipy.tasks]
dev = "fastapi dev crud_fastapi/main.py"
prod = "fastapi run crud_fastapi/main.py"
test = "pytest --cov=crud_fastapi tests/"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--cov=crud_fastapi --cov-report html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
